# Motion-Based-Android-Authentication

./: .gitignore  README.md
sensorsshowcase/: Accelerometer.qml  CMakeLists.txt  CMakeLists.txt.user.ec2ee97  Main.qml  accelerometersensor.cpp  accelerometersensor.h  gyroscopesensor.cpp  gyroscopesensor.h  main.cpp  validator.cpp  validator.h
sensorsshowcase/android/: AndroidManifest.xml
src/: CMakeLists.txt  Main.qml  main.cpp  motionbasedauthentication.cpp  motionbasedauthentication.h
